--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -55,7 +55,7 @@ button:hover {
 #workspaces button {
     padding: 0 4px;
     background-color: transparent;
-    color: #1B1BFF;
+    color: #FFFFFF;
     font-weight: 100;
 }
 
@@ -340,6 +340,7 @@ label:focus {
   padding-left: 9px;
   border: 3px solid #FFFFFF;
   border-radius: 40px;
+  background-color: #161616;
 }
 
 .modules-center {
@@ -350,4 +351,5 @@ label:focus {
   margin: 4px 10px 10px 0;
   border: 3px solid #FFFFFF;
   border-radius: 40px;
+  background-color: #161616;
 }
